--- a/book/makepad/code/code.html
+++ b/book/makepad/code/code.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Redraw - Gen-UI Book</title>
+        <title>Code Guide - Gen-UI Book</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/code/code.html"><strong aria-hidden="true">2.2.</strong> Code Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/code/widgets/define.html"><strong aria-hidden="true">2.2.1.</strong> Define Easy Widget</a></li><li class="chapter-item expanded "><a href="../../makepad/code/widgets/define2.html"><strong aria-hidden="true">2.2.2.</strong> Define Deref Widget</a></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/built-in/built-in.html"><strong aria-hidden="true">2.3.</strong> Built-In</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/built-in/types/types.html"><strong aria-hidden="true">2.3.1.</strong> Types</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/built-in/types/walk.html"><strong aria-hidden="true">2.3.1.1.</strong> Walk</a></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/built-in/widgets/widgets.html"><strong aria-hidden="true">2.3.2.</strong> Widgets</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/built-in/widgets/window.html"><strong aria-hidden="true">2.3.2.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../../makepad/built-in/widgets/view.html"><strong aria-hidden="true">2.3.2.2.</strong> View</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.4.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/syntax/global.html"><strong aria-hidden="true">2.4.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/import.html"><strong aria-hidden="true">2.4.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.4.3.</strong> Macro</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/redraw.html" class="active"><strong aria-hidden="true">2.4.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../makepad/event/event.html"><strong aria-hidden="true">2.4.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/event/match_event.html"><strong aria-hidden="true">2.4.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/code/code.html" class="active"><strong aria-hidden="true">2.2.</strong> Code Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/code/widgets/define.html"><strong aria-hidden="true">2.2.1.</strong> Define Easy Widget</a></li><li class="chapter-item expanded "><a href="../../makepad/code/widgets/define2.html"><strong aria-hidden="true">2.2.2.</strong> Define Deref Widget</a></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/built-in/built-in.html"><strong aria-hidden="true">2.3.</strong> Built-In</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/built-in/types/types.html"><strong aria-hidden="true">2.3.1.</strong> Types</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/built-in/types/walk.html"><strong aria-hidden="true">2.3.1.1.</strong> Walk</a></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/built-in/widgets/widgets.html"><strong aria-hidden="true">2.3.2.</strong> Widgets</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/built-in/widgets/window.html"><strong aria-hidden="true">2.3.2.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../../makepad/built-in/widgets/view.html"><strong aria-hidden="true">2.3.2.2.</strong> View</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.4.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/syntax/global.html"><strong aria-hidden="true">2.4.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/import.html"><strong aria-hidden="true">2.4.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.4.3.</strong> Macro</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/redraw.html"><strong aria-hidden="true">2.4.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../makepad/event/event.html"><strong aria-hidden="true">2.4.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/event/match_event.html"><strong aria-hidden="true">2.4.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -173,61 +173,17 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="redrawing-mechanism"><a class="header" href="#redrawing-mechanism">Redrawing Mechanism</a></h1>
-<p>Understanding the correct strategies for redrawing is crucial for optimizing application performance and user experience in UI development. Here are two commonly used methods for redrawing and their appropriate scenarios.</p>
-<h2 id="immediate-redraw"><a class="header" href="#immediate-redraw">Immediate Redraw</a></h2>
-<p>The <code>apply_over_and_redraw</code> method allows for the immediate redrawing of the target component. This means that as soon as this method is executed, the specified component will be updated and redrawn right away.</p>
-<p><strong>Applicable Scenario</strong>: This method is suitable when immediate reflection of user interactions or data changes on the UI is required. It ensures the interface responds instantly.</p>
-<p><strong>Example Code</strong>:</p>
-<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>impl MatchEvent for App {
-    fn handle_actions(&amp;mut self, cx: &amp;mut Cx, actions: &amp;Actions) {
-        if self.ui.button(id!(btn1)).clicked(&amp;actions) {
-            self.counter += 1;
-            let label = self.ui.label(id!(t_label));
-            label.apply_over_and_redraw(cx, live! {
-                text: (format!("Click Number: {}", self.counter)),
-            });
-        }
-    }
-}
-<span class="boring">}</span></code></pre></pre>
-<h2 id="batch-redraw"><a class="header" href="#batch-redraw">Batch Redraw</a></h2>
-<p>Another method involves using <code>apply_over</code> to update the data first, followed by a unified call to <code>redraw</code> for redrawing. This method allows for batching changes to multiple components or data, followed by a one-time UI update, reducing the number of renders.</p>
-<p><strong>Applicable Scenario</strong>: When updating multiple components or making multiple data changes, using batch updates followed by a one-time redraw can improve performance by avoiding unnecessary rendering overhead.</p>
-<p><strong>Example Code</strong>:</p>
-<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>impl MatchEvent for App {
-    fn handle_actions(&amp;mut self, cx: &amp;mut Cx, actions: &amp;Actions) {
-        if self.ui.button(id!(btn1)).clicked(&amp;actions) {
-            self.counter += 1;
-            let label = self.ui.label(id!(t_label));
-            label.apply_over(cx, live! {
-                text: (format!("Click Number: {}", self.counter)),
-            });
-            label.redraw(cx);
-        }
-    }
-}
-<span class="boring">}</span></code></pre></pre>
-<h2 id="considerations"><a class="header" href="#considerations">Considerations</a></h2>
-<ul>
-<li>Using <code>apply_over_and_redraw</code> within a redraw function may lead to continuous redraws, which should be avoided in such contexts.</li>
-<li>Generally, it's recommended to use <code>apply_over</code> to update data where possible and then call <code>redraw</code> to redraw collectively, for optimizing application performance.</li>
-</ul>
-<p>By carefully choosing the appropriate redraw strategy, you can ensure a good user experience while optimizing the application's performance.</p>
+                        <h1 id="code-guide"><a class="header" href="#code-guide">Code Guide</a></h1>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../makepad/syntax/macro/macro.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../makepad/quickstart.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../../makepad/event/event.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../../makepad/code/widgets/define.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -237,11 +193,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../makepad/syntax/macro/macro.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../makepad/quickstart.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../../makepad/event/event.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../../makepad/code/widgets/define.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
