--- a/book/makepad/code/widgets/define.html
+++ b/book/makepad/code/widgets/define.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Types - Gen-UI Book</title>
+        <title>Define Easy Widget - Gen-UI Book</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../../makepad/code/code.html"><strong aria-hidden="true">2.2.</strong> Code Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/code/widgets/define.html"><strong aria-hidden="true">2.2.1.</strong> Define Easy Widget</a></li><li class="chapter-item expanded "><a href="../../../makepad/code/widgets/define2.html"><strong aria-hidden="true">2.2.2.</strong> Define Deref Widget</a></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/built-in.html"><strong aria-hidden="true">2.3.</strong> Built-In</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/types/types.html" class="active"><strong aria-hidden="true">2.3.1.</strong> Types</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/types/walk.html"><strong aria-hidden="true">2.3.1.1.</strong> Walk</a></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/widgets.html"><strong aria-hidden="true">2.3.2.</strong> Widgets</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/window.html"><strong aria-hidden="true">2.3.2.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/view.html"><strong aria-hidden="true">2.3.2.2.</strong> View</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.4.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/syntax/global.html"><strong aria-hidden="true">2.4.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/import.html"><strong aria-hidden="true">2.4.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.4.3.</strong> Macro</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/redraw.html"><strong aria-hidden="true">2.4.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../../makepad/event/event.html"><strong aria-hidden="true">2.4.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/event/match_event.html"><strong aria-hidden="true">2.4.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../../makepad/code/code.html"><strong aria-hidden="true">2.2.</strong> Code Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/code/widgets/define.html" class="active"><strong aria-hidden="true">2.2.1.</strong> Define Easy Widget</a></li><li class="chapter-item expanded "><a href="../../../makepad/code/widgets/define2.html"><strong aria-hidden="true">2.2.2.</strong> Define Deref Widget</a></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/built-in.html"><strong aria-hidden="true">2.3.</strong> Built-In</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/types/types.html"><strong aria-hidden="true">2.3.1.</strong> Types</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/types/walk.html"><strong aria-hidden="true">2.3.1.1.</strong> Walk</a></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/widgets.html"><strong aria-hidden="true">2.3.2.</strong> Widgets</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/window.html"><strong aria-hidden="true">2.3.2.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/view.html"><strong aria-hidden="true">2.3.2.2.</strong> View</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.4.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/syntax/global.html"><strong aria-hidden="true">2.4.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/import.html"><strong aria-hidden="true">2.4.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.4.3.</strong> Macro</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/redraw.html"><strong aria-hidden="true">2.4.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../../makepad/event/event.html"><strong aria-hidden="true">2.4.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/event/match_event.html"><strong aria-hidden="true">2.4.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -173,17 +173,105 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="types"><a class="header" href="#types">Types</a></h1>
+                        <h1 id="defining-a-widget-in-makepad"><a class="header" href="#defining-a-widget-in-makepad">Defining a Widget in Makepad</a></h1>
+<p>In this chapter, we'll delve into the creation of a <code>MyLabel</code> Widget, which extends the capabilities of the built-in <code>Label</code> widget in Makepad.</p>
+<h2 id="starting-with-a-new-module"><a class="header" href="#starting-with-a-new-module">Starting with a New Module</a></h2>
+<p>First, create a new module for our custom widget:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>pub mod my_label;
+<span class="boring">}</span></code></pre></pre>
+<h2 id="crafting-a-live-design"><a class="header" href="#crafting-a-live-design">Crafting a Live Design</a></h2>
+<p>The <code>live_design!</code> macro allows for an effortless and succinct definition of custom widgets. Here, we define <code>MyLabel</code> with unique styling:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use makepad_widgets::*;
+
+live_design!{
+    import makepad_widgets::base::*;
+    import makepad_widgets::theme_desktop_dark::*;
+
+    MyLabel = {{MyLabel}}{
+        draw_text:{
+            color: #EF5350,
+            text_style: { 
+                font: {
+                    path: dep("crate://makepad-widgets/resources/IBMPlexSans-SemiBold.ttf")
+                }, 
+                brightness: 1.1,  
+                font_size: 32.0
+            } 
+        }
+    }
+}
+<span class="boring">}</span></code></pre></pre>
+<h2 id="defining-the-widget-structure"><a class="header" href="#defining-the-widget-structure">Defining the Widget Structure</a></h2>
+<p><code>MyLabel</code> will utilize the <code>Widget</code> trait and directly reference (<code>deref</code>) the <code>Label</code> widget:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>#[derive(Live,Widget,LiveHook)]
+pub struct MyLabel{
+    #[redraw]
+    #[deref]
+    instance: Label
+}
+<span class="boring">}</span></code></pre></pre>
+<h2 id="implementing-the-widget-trait"><a class="header" href="#implementing-the-widget-trait">Implementing the Widget Trait</a></h2>
+<p>Next, we implement the <code>Widget</code> trait for <code>MyLabel</code> to ensure it behaves as intended:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>impl Widget for MyLabel {
+    fn draw_walk(&amp;mut self, cx: &amp;mut Cx2d, scope: &amp;mut Scope, walk: Walk) -&gt; DrawStep {
+        self.instance.draw_walk(cx, scope, walk)
+    }
+}
+<span class="boring">}</span></code></pre></pre>
+<h2 id="registering-in-the-application"><a class="header" href="#registering-in-the-application">Registering in the Application</a></h2>
+<p>It's crucial to register our custom widget in the application to make it available for use:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>impl LiveRegister for App {
+    fn live_register(cx: &amp;mut Cx) {
+        crate::my_label::live_design(cx);
+        crate::makepad_widgets::live_design(cx);
+    }
+}
+<span class="boring">}</span></code></pre></pre>
+<h2 id="utilizing-in-the-apps-live-design"><a class="header" href="#utilizing-in-the-apps-live-design">Utilizing in the App's Live Design</a></h2>
+<p>Finally, incorporate <code>MyLabel</code> into the application's live design, setting it up for use:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>live_design! {
+    import makepad_widgets::base::*;
+    import makepad_widgets::theme_desktop_dark::*;
+    import makepad_example_simple::my_label::*;
+    App = {{App}}{ 
+        ui: &lt;Window&gt;{
+            show_bg: true, 
+            width: Fill, 
+            draw_bg: { color: #96CEF8 }, 
+            height: Fill,  
+            body = &lt;View&gt;{
+                align: {x: 0.5, y: 0.5}, 
+                &lt;MyLabel&gt;{
+                    text: "this is my label widget"
+                } 
+            } 
+        } 
+    }
+}
+<span class="boring">}</span></code></pre></pre>
+<p><img src="../../../static/my_label.png" alt="Custom MyLabel Widget Example" /></p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../../makepad/built-in/built-in.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../../makepad/code/code.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../../../makepad/built-in/types/walk.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../../../makepad/code/widgets/define2.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -193,11 +281,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../../makepad/built-in/built-in.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../../makepad/code/code.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../../../makepad/built-in/types/walk.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../../../makepad/code/widgets/define2.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
