--- a/book/makepad/code/widgets/define2.html
+++ b/book/makepad/code/widgets/define2.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Types - Gen-UI Book</title>
+        <title>Define Deref Widget - Gen-UI Book</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../../makepad/code/code.html"><strong aria-hidden="true">2.2.</strong> Code Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/code/widgets/define.html"><strong aria-hidden="true">2.2.1.</strong> Define Easy Widget</a></li><li class="chapter-item expanded "><a href="../../../makepad/code/widgets/define2.html"><strong aria-hidden="true">2.2.2.</strong> Define Deref Widget</a></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/built-in.html"><strong aria-hidden="true">2.3.</strong> Built-In</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/types/types.html" class="active"><strong aria-hidden="true">2.3.1.</strong> Types</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/types/walk.html"><strong aria-hidden="true">2.3.1.1.</strong> Walk</a></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/widgets.html"><strong aria-hidden="true">2.3.2.</strong> Widgets</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/window.html"><strong aria-hidden="true">2.3.2.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/view.html"><strong aria-hidden="true">2.3.2.2.</strong> View</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.4.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/syntax/global.html"><strong aria-hidden="true">2.4.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/import.html"><strong aria-hidden="true">2.4.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.4.3.</strong> Macro</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/redraw.html"><strong aria-hidden="true">2.4.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../../makepad/event/event.html"><strong aria-hidden="true">2.4.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/event/match_event.html"><strong aria-hidden="true">2.4.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../../makepad/code/code.html"><strong aria-hidden="true">2.2.</strong> Code Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/code/widgets/define.html"><strong aria-hidden="true">2.2.1.</strong> Define Easy Widget</a></li><li class="chapter-item expanded "><a href="../../../makepad/code/widgets/define2.html" class="active"><strong aria-hidden="true">2.2.2.</strong> Define Deref Widget</a></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/built-in.html"><strong aria-hidden="true">2.3.</strong> Built-In</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/types/types.html"><strong aria-hidden="true">2.3.1.</strong> Types</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/types/walk.html"><strong aria-hidden="true">2.3.1.1.</strong> Walk</a></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/widgets.html"><strong aria-hidden="true">2.3.2.</strong> Widgets</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/window.html"><strong aria-hidden="true">2.3.2.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/view.html"><strong aria-hidden="true">2.3.2.2.</strong> View</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.4.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/syntax/global.html"><strong aria-hidden="true">2.4.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/import.html"><strong aria-hidden="true">2.4.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.4.3.</strong> Macro</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/redraw.html"><strong aria-hidden="true">2.4.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../../makepad/event/event.html"><strong aria-hidden="true">2.4.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/event/match_event.html"><strong aria-hidden="true">2.4.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -173,17 +173,116 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="types"><a class="header" href="#types">Types</a></h1>
+                        <h1 id="extending-widget-functionality-with-dereflabel"><a class="header" href="#extending-widget-functionality-with-dereflabel">Extending Widget Functionality with DerefLabel</a></h1>
+<p>Following our previous exploration where we introduced the <code>MyLabel</code> widget, extending the <code>Label</code>, this chapter ventures into more sophisticated use cases. While <code>Label</code> provides a robust foundation, there might be instances where its granular control over internal properties isn't necessary for your project's needs.</p>
+<h2 id="initiating-with-a-new-module"><a class="header" href="#initiating-with-a-new-module">Initiating with a New Module</a></h2>
+<p>Begin by creating a module specifically for our enhanced widget:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>pub mod deref_label;
+<span class="boring">}</span></code></pre></pre>
+<h2 id="designing-a-live-layout"><a class="header" href="#designing-a-live-layout">Designing a Live Layout</a></h2>
+<p>In this step, we define <code>DerefLabel</code>, focusing on simplicity and reusability:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use makepad_widgets::*;
+
+live_design!{
+    import makepad_widgets::base::*;
+    import makepad_widgets::theme_desktop_dark::*;
+
+    DerefLabel = {{DerefLabel}}{
+        instance = &lt;Label&gt;{
+            draw_text:{
+                text_style: { 
+                    font: {
+                        path: dep("crate://makepad-widgets/resources/IBMPlexSans-SemiBold.ttf")
+                    }, 
+                } 
+            }
+        }
+    }
+}
+<span class="boring">}</span></code></pre></pre>
+<h2 id="creating-a-deref-structure"><a class="header" href="#creating-a-deref-structure">Creating a Deref Structure</a></h2>
+<p><code>DerefLabel</code> is designed with simplicity and flexibility in mind, allowing for easy customization of text, color, and font size:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>#[derive(Live,Widget,LiveHook)]
+pub struct DerefLabel{
+    #[live]
+    pub text: RcStringMut,
+    #[live]
+    pub color: Vec4,
+    #[live(16.0)]
+    pub font_size: f64,
+    #[deref]
+    view: View
+}
+<span class="boring">}</span></code></pre></pre>
+<h2 id="implementing-the-widget-trait"><a class="header" href="#implementing-the-widget-trait">Implementing the Widget Trait</a></h2>
+<p>With the widget's structure defined, we implement the <code>Widget</code> trait to specify how <code>DerefLabel</code> behaves and is rendered:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>impl Widget for DerefLabel {
+    fn draw_walk(&amp;mut self, cx: &amp;mut Cx2d, scope: &amp;mut Scope, walk: Walk) -&gt; DrawStep {
+        
+        self.label(id!(instance)).apply_over_and_redraw(cx, live!{
+            text: (self.text),
+            draw_text:{
+                color: (self.color),
+                text_style:{
+                    font_size: (self.font_size)
+                },
+            }
+        });
+        self.view.draw_walk(cx, scope, walk)
+    }
+    fn set_text(&amp;mut self, v: &amp;str) {
+        self.label(id!(instance)).set_text(v);
+    }
+    fn text(&amp;self) -&gt; String {
+       self.text.as_ref().to_string()
+    }
+}
+<span class="boring">}</span></code></pre></pre>
+<h2 id="use-deref-label"><a class="header" href="#use-deref-label">Use Deref Label</a></h2>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use makepad_widgets::*;
+live_design! {
+    import makepad_widgets::base::*;
+    import makepad_widgets::theme_desktop_dark::*;
+    import makepad_example_simple::deref_label::*;
+    App = {{App}}{ 
+        ui: &lt;Window&gt;{
+            show_bg: true, 
+            width: Fill, 
+            draw_bg: { color: #96CEF8 }, 
+            height: Fill,  
+            body = &lt;View&gt;{
+                align: {x: 0.5, y: 0.5}, 
+                &lt;DerefLabel&gt;{
+                    text: "this is deref label widget",
+                    color: #6BC46D,
+                    font_size: 32.0
+                } 
+            } 
+        } 
+    }
+}
+<span class="boring">}</span></code></pre></pre>
+<p><img src="../../../static/deref_label.png" alt="" /></p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../../makepad/built-in/built-in.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../../makepad/code/widgets/define.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../../../makepad/built-in/types/walk.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../../../makepad/built-in/built-in.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -193,11 +292,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../../makepad/built-in/built-in.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../../makepad/code/widgets/define.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../../../makepad/built-in/types/walk.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../../../makepad/built-in/built-in.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
